--- a/projects/binom/sdk-user/profile-img/src/bn-profile-image.component.html
+++ b/projects/binom/sdk-user/profile-img/src/bn-profile-image.component.html
@@ -1,1 +1,3 @@
-<p>bn-profile-image works!</p>
+
+<bn-profile-image-show [id]="id" [transform]="transform" [imageUrl]="imageUrl" [height]="height" [width]="width" *ngIf="!editMode"></bn-profile-image-show>
+<bn-profile-image-edit [id]="id" [transform]="transform"  [imageUrl]="imageUrl" [height]="height" [width]="width" *ngIf="editMode"></bn-profile-image-edit>
