--- a/projects/binom/sdk-user/profile-img/src/bn-profile-image-show/bn-profile-image-show.component.html
+++ b/projects/binom/sdk-user/profile-img/src/bn-profile-image-show/bn-profile-image-show.component.html
@@ -1,1 +1,48 @@
-<p>bn-profile-image-show works!</p>
+<svg 
+[attr.id]="'profile-img'+id"  
+[attr.height]="height>0?height:null" 
+[attr.width]="width>0?width:null"
+viewBox="0 0 120 120"  
+version="1.1" 
+xmlns="http://www.w3.org/2000/svg" 
+xmlns:svg="http://www.w3.org/2000/svg">
+  
+    <defs [attr.id]="'binom-show-me-defs'+id">
+        <clipPath [attr.id]="'circle-clip'+id"><circle cx="60" cy="60" r="53" /></clipPath>
+    </defs>
+
+    <circle class="profile-image" cx="60" cy="60" r="54" stroke="#111" fill="white" stroke-width="2"></circle>
+
+    <g [attr.clip-path]="'url(#circle-clip'+id+')'">
+        
+        <image 
+        id="profileImage" 
+        [attr.href]="imageUrl" 
+        [attr.width]="imageWidth" 
+        [attr.height]="imageHeight" 
+        [attr.transform]="transform"></image>
+    
+    </g>
+
+    <g *ngIf="imageUrl === '' || imageUrl === null " [attr.clip-path]="'url(#circle-clip'+id+')'">
+        <g transform="translate(15 30) scale(0.17)" class="profile-default-image" fill="transparent" stroke-width="4">
+            <path d="M416,362.667h42.667c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667
+                S448,303.445,448,309.333v32h-32c-5.888,0-10.667,4.779-10.667,10.667C405.333,357.888,410.112,362.667,416,362.667z"/>
+            <path d="M421.184,384.96l-81.728-20.416l-6.955-27.819c21.867-21.653,36.864-51.392,41.301-81.92
+                c12.117-3.392,21.504-13.803,23.125-26.837l5.333-42.667c1.131-9.003-1.643-18.091-7.595-24.939
+                c-3.499-4.011-7.915-7.061-12.821-8.917l1.963-40.171l7.979-7.979c12.011-12.8,21.973-34.709,1.152-66.475
+                C376.917,12.395,349.739,0,312.128,0c-14.827,0-49.024,0-80.875,21.376C140.352,23.275,128,65.472,128,106.667
+                c0,9.579,2.325,31.147,3.861,44.16c-5.483,1.728-10.453,4.907-14.336,9.323c-6.059,6.869-8.896,16.043-7.765,25.173l5.333,42.667
+                c1.728,13.888,12.309,24.832,25.643,27.435c4.437,29.312,18.624,58.112,39.232,79.403l-7.424,29.739l-81.728,20.416
+                C37.333,398.336,0,446.187,0,501.333C0,507.221,4.779,512,10.667,512h490.667c5.888,0,10.667-4.821,10.667-10.709
+                C512,446.187,474.667,398.336,421.184,384.96z"/>
+            <path d="M416,21.333h32v32C448,59.221,452.779,64,458.667,64s10.667-4.779,10.667-10.667V10.667
+                C469.333,4.779,464.555,0,458.667,0H416c-5.888,0-10.667,4.779-10.667,10.667S410.112,21.333,416,21.333z"/>
+            <path d="M53.333,362.667H96c5.888,0,10.667-4.779,10.667-10.667c0-5.888-4.779-10.667-10.667-10.667H64v-32
+                c0-5.888-4.779-10.667-10.667-10.667s-10.667,4.779-10.667,10.667V352C42.667,357.888,47.445,362.667,53.333,362.667z"/>
+            <path d="M53.333,64C59.221,64,64,59.221,64,53.333v-32h32c5.888,0,10.667-4.779,10.667-10.667S101.888,0,96,0H53.333
+                c-5.888,0-10.667,4.779-10.667,10.667v42.667C42.667,59.221,47.445,64,53.333,64z"/>
+        </g>
+    </g>
+ 
+</svg>
