profile-image testapp

--- a/projects/binom/sdk-user/password/src/bn-password-input.component.html
+++ b/projects/binom/sdk-user/password/src/bn-password-input.component.html
@@ -11,10 +11,11 @@
       <input matInput [type]="visible? 'text':'password'" (input)="updatePwdMeter()"
         formControlName="password" [errorStateMatcher]="matcher"
         name="password" autocomplete="on" required autocomplete="new-password">
-      <mat-error>
-        <ng-container *ngFor="let validation of validationList.password">
+      
+        <mat-error>
+        <ng-container *ngFor="let validation of validationList.password; let i = index">
         <ng-container
-        *ngIf="bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched)  ">
+        *ngIf=" bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched)  ">
           <bn-form-error [min]="min" [max]="max"
           [type]="validation.type" [inputLength]="bnPassword.get('password')!.value.length" [message]="validation!.message!">
           </bn-form-error>
@@ -35,9 +36,9 @@
       formControlName="password_repeat"  required [errorStateMatcher]="matcher"
       name="password_repeat" autocomplete="on">
       <mat-error >
-        <ng-container *ngFor="let validation of validationList.password_repeat">
-            <ng-container *ngIf="bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)">
-            <bn-form-error [min]="min" [max]="max" [type]="validation.type" [message]="validation!.message!"></bn-form-error>
+        <ng-container *ngFor="let validation of validationList.password_repeat; let i = index">
+            <ng-container *ngIf="i === 0 && bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)">
+              <bn-form-error [min]="min" [max]="max" [type]="validation.type" [message]="validation!.message!"></bn-form-error>
             </ng-container>    
         </ng-container>
       </mat-error>
