--- a/projects/test/src/styles.scss
+++ b/projects/test/src/styles.scss
@@ -4,3 +4,7 @@
 .regular-border,.picklist-item{
     border-color: dimgray !important;
   }
+
+  .profile-default-image{
+    fill:#46a35e !important
+  }
