--- a/projects/binom/sdk-user/profile-img/src/bn-profile-image-show/bn-profile-image-show.component.html
+++ b/projects/binom/sdk-user/profile-img/src/bn-profile-image-show/bn-profile-image-show.component.html
@@ -11,12 +11,12 @@ xmlns:svg="http://www.w3.org/2000/svg">
         <clipPath [attr.id]="'circle-clip'+id"><circle cx="60" cy="60" r="53" /></clipPath>
     </defs>
 
-    <circle class="profile-image" cx="60" cy="60" r="54" stroke="#111" fill="white" stroke-width="2"></circle>
+    <circle class="profile-image" cx="60" cy="60" r="54" stroke="transparent" fill="transparent" stroke-width="2"></circle>
 
     <g [attr.clip-path]="'url(#circle-clip'+id+')'">
         
         <image 
-        id="profileImage" 
+        [attr.id]="'bn-profil-image'+id"
         [attr.href]="imageUrl" 
         [attr.width]="imageWidth" 
         [attr.height]="imageHeight" 
@@ -24,7 +24,7 @@ xmlns:svg="http://www.w3.org/2000/svg">
     
     </g>
 
-    <g *ngIf="imageUrl === '' || imageUrl === null " [attr.clip-path]="'url(#circle-clip'+id+')'">
+    <g *ngIf="imageUrl === '' && imageUrl === null " [attr.clip-path]="'url(#circle-clip'+id+')'">
         <g transform="translate(15 30) scale(0.17)" class="profile-default-image" fill="transparent" stroke-width="4">
             <path d="M416,362.667h42.667c5.888,0,10.667-4.779,10.667-10.667v-42.667c0-5.888-4.779-10.667-10.667-10.667
                 S448,303.445,448,309.333v32h-32c-5.888,0-10.667,4.779-10.667,10.667C405.333,357.888,410.112,362.667,416,362.667z"/>
