--- a/projects/test/src/app/app.component.html
+++ b/projects/test/src/app/app.component.html
@@ -8,7 +8,7 @@
     <span style="margin-left: 10px;"></span> 
     <span class="toolbar-spacer"></span> 
     <bn-translate-switch-menu></bn-translate-switch-menu>
-   
+     <bn-login-menu></bn-login-menu>
     <span style="font-size: 10px;font-weight: 100;"><i class="fas fa-at"></i>binom/sdk-user 1.0.0 </span>
 
 </mat-toolbar>
@@ -37,9 +37,6 @@
         </mat-expansion-panel>
       }
      
-     
-      
-
     </mat-accordion>
   </mat-drawer>
 
