prepare first realease

--- a/projects/binom/sdk-user/password/src/bn-password-input.component.html
+++ b/projects/binom/sdk-user/password/src/bn-password-input.component.html
@@ -13,17 +13,14 @@
         name="password" autocomplete="on" required autocomplete="new-password">
       
         <mat-error>
-        <ng-container *ngFor="let validation of validationList.password; let i = index">
-        <ng-container
-        *ngIf=" bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched)  ">
+          <ng-container *ngFor="let validation of validationList.password; let i = index">
+          <ng-container *ngIf="  bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched)  ">
           <bn-form-error [min]="min" [max]="max"
-          [type]="validation.type" [inputLength]="bnPassword.get('password')!.value.length" [message]="validation!.message!">
+            [type]="validation.type" [inputLength]="bnPassword.get('password')!.value.length" [message]="validation!.message!">
           </bn-form-error>
-        </ng-container> </ng-container>
-      </mat-error>
-      <mat-hint [class]="bnPassword.get('password')!.value.length > max? 'color-warn':''" align="end">
-        {{bnPassword.get('password')!.value.length}} / {{max}}
-      </mat-hint>
+          </ng-container> </ng-container>
+        </mat-error>
+     
     </mat-form-field>
   
     <mat-progress-bar class="strengthMeter regular-border" mode="determinate"
@@ -37,8 +34,9 @@
       name="password_repeat" autocomplete="on">
       <mat-error >
         <ng-container *ngFor="let validation of validationList.password_repeat; let i = index">
-            <ng-container *ngIf="i === 0 && bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)">
+            <ng-container *ngIf="bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)">
               <bn-form-error [min]="min" [max]="max" [type]="validation.type" [message]="validation!.message!"></bn-form-error>
+              
             </ng-container>    
         </ng-container>
       </mat-error>
