replace *ngIf / *ngFor to @if / @for

--- a/projects/binom/sdk-user/password/src/bn-password-input.component.html
+++ b/projects/binom/sdk-user/password/src/bn-password-input.component.html
@@ -1,26 +1,18 @@
 <div class="bnPassword" [formGroup]="bnPassword" >
     <mat-form-field class="passwordField " [color]="color" >
       <mat-label>{{'Password' | translate}}</mat-label>
-    <span matSuffix>
-      <button type="button" mat-icon-button class="font-fa" (click)="visible = !visible" > 
-        <i class="fas {{visible ? 'fa-eye' : 'fa-eye-slash'}}"></i>
-      </button>
-  
-      <bn-suffix-info iconType="fas" icon="fa-key" [infoData]="infoData"></bn-suffix-info>
-    </span>
-      <input matInput [type]="visible? 'text':'password'" (input)="updatePwdMeter()"
-        formControlName="password" [errorStateMatcher]="matcher"
-        name="password" autocomplete="on" required autocomplete="new-password">
-      
+      <span matSuffix>
+        <button type="button" mat-icon-button class="font-fa" (click)="visible = !visible" > <i class="fas {{visible ? 'fa-eye' : 'fa-eye-slash'}}"></i> </button>
+        <bn-suffix-info iconType="fas" icon="fa-key" [infoData]="infoData"></bn-suffix-info>
+      </span>
+      <input matInput [type]="visible? 'text':'password'" (input)="updatePwdMeter()" formControlName="password" [errorStateMatcher]="matcher" name="password" autocomplete="on" required autocomplete="new-password">
         <mat-error>
-          <ng-container *ngFor="let validation of validationList.password; let i = index">
-          <ng-container *ngIf="  bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched)  ">
-          <bn-form-error [min]="min" [max]="max"
-            [type]="validation.type" [inputLength]="bnPassword.get('password')!.value.length" [message]="validation!.message!">
-          </bn-form-error>
-          </ng-container> </ng-container>
+          @for (validation of validationList.password; track $index) {
+            @if(bnPassword.get('password')!.hasError(validation.type) && (bnPassword.get('password')!.dirty || bnPassword.get('password')!.touched) ){
+              <bn-form-error [min]="min" [max]="max" [type]="validation.type" [inputLength]="bnPassword.get('password')!.value.length" [message]="validation!.message!"> </bn-form-error>
+            }
+          }
         </mat-error>
-     
     </mat-form-field>
   
     <mat-progress-bar class="strengthMeter regular-border" mode="determinate"
@@ -29,18 +21,14 @@
   
     <mat-form-field class="passwordField" [color]="color">
       <mat-label>{{'RepeatPassword' | translate}} </mat-label>
-      <input matInput [type]="visible? 'text':'password'"
-      formControlName="password_repeat"  required [errorStateMatcher]="matcher"
-      name="password_repeat" autocomplete="on">
-      <mat-error >
-        <ng-container *ngFor="let validation of validationList.password_repeat; let i = index">
-            <ng-container *ngIf="bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)">
-              <bn-form-error [min]="min" [max]="max" [type]="validation.type" [message]="validation!.message!"></bn-form-error>
-              
-            </ng-container>    
-        </ng-container>
+      <input matInput [type]="visible? 'text':'password'" formControlName="password_repeat"  required [errorStateMatcher]="matcher" name="password_repeat" autocomplete="on">
+      <mat-error>
+        @for (validation of validationList.password_repeat;track $index){
+          @if(bnPassword.get('password_repeat')!.hasError(validation.type) && (bnPassword.get('password_repeat')!.dirty || bnPassword.get('password_repeat')!.touched) || bnPassword!.hasError(validation.type)){
+            <bn-form-error [min]="min" [max]="max" [type]="validation.type" [message]="validation!.message!"></bn-form-error>
+          }
+        }
       </mat-error>
-  
       <mat-hint [class]="bnPassword.get('password')!.value.length > max? 'color-warn':''" align="end">
         {{bnPassword.get('password_repeat')!.value.length}} / {{max}}
       </mat-hint>
